[gd_scene load_steps=2 format=3 uid="uid://1aks2umit20g"]

[ext_resource type="Script" path="res://src/scene/project_item.gd" id="1_i1grl"]

[node name="ProjectItem" type="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i1grl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/v_separation = -2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "项目版本："
horizontal_alignment = 2

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "修改时间："
horizontal_alignment = 2

[node name="ModifiedTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="SelectRect" type="ReferenceRect" parent="."]
layout_mode = 2
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
border_width = 4.0
